--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,19 @@
 @charset "utf-8";
 /* 全局 */
 body,
-ul{
+ul,
+h2,
+input{
     margin: 0;
     padding: 0;
 }
 body{
     color: #fff;
     font-size: 16px;
+}
+h2{
+    text-align: center;
+    font-size: 18px;
 }
 input{
     color: #fff;
@@ -31,6 +37,7 @@ button{
     float: right;
     background: #d8d8d8;
     border: none;
+    outline: none;
 }
 
 /* wrapper */
@@ -61,4 +68,7 @@ nav li a{
 /* main */
 main{
     padding: 10px 20px;
+}
+#a{
+    margin: 0 3px;
 }
